--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="row" id="row1"></div>
+    <div class="row" id="row2"></div>
+    <div class="row" id="row3"></div>
     <script src="index.js"></script>
 </body>
 </html>
