--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
     <div class="row" id="row1"></div>
     <div class="row" id="row2"></div>
     <div class="row" id="row3"></div>
+    <div class="row" id="row4"></div>
+    <div class="row" id="row5"></div>
+    <div class="row" id="score"></div>
     <script src="index.js"></script>
 </body>
 </html>
