--- a/src/index.html
+++ b/src/index.html
@@ -2,32 +2,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.3/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Stylesheets/bootstrap.css" />
+    <link rel="stylesheet" href="Stylesheets/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <div class="row" id="row1"></div>
-    <div class="row" id="row2"></div>
-    <div class="row" id="row3"></div>
-    <div class="row" id="row4"></div>
-    <div class="row" id="row5"></div>
+    <div class="row" id="row1">
+      <div class="category" id="category1">Lorem</div>
+      <div class="category" id="category2">Ipsum</div>
+      <div class="category" id="category3">is</div>
+      <div class="category" id="category4">Great</div>
+    </div>
+    <div class="row" id="row2">
+      <button class="question" id="q1">100</button>
+      <button class="question" id="q2">200</button>
+      <button class="question" id="q3">300</button>
+      <button class="question" id="q4">400</button>
+    </div>
+    <div class="row" id="row3">
+      <button class="question" id="q5">100</button>
+      <button class="question" id="q6">200</button>
+      <button class="question" id="q7">300</button>
+      <button class="question" id="q8">400</button>
+    </div>
+    <div class="row" id="row4">
+      <button class="question" id="q9">100</button>
+      <button class="question" id="q10">200</button>
+      <button class="question" id="q11">300</button>
+      <button class="question" id="q12">400</button>
+    </div>
+    <div class="row" id="row5">
+      <button class="question" id="q13">100</button>
+      <button class="question" id="q14">200</button>
+      <button class="question" id="q15">300</button>
+      <button class="question" id="q16">400</button>
+    </div>
     <div class="row" id="score"></div>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.3/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
-    <script src="index.js"></script>
+    <script src="Scripts/index.js"></script>
   </body>
 </html>
