Made some changes

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="row" id="row1">
-      <div class="category" id="category1">Lorem</div>
-      <div class="category" id="category2">Ipsum</div>
-      <div class="category" id="category3">is</div>
-      <div class="category" id="category4">Great</div>
+      <div class="category" id="category1">BASICS</div>
+      <div class="category" id="category2">COMPETITIVE</div>
+      <div class="category" id="category3">STATS</div>
+      <div class="category" id="category4">NUMBERS</div>
     </div>
     <div class="row" id="row2">
       <button class="question" id="q1">100</button>
