--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,7 @@
     <link rel="stylesheet" href="Stylesheets/style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <div class="row" id="row1">
-    </div>
-    <div class="row" id="row2">
-    </div>
-    <div class="row" id="row3">
-    </div>
-    <div class="row" id="row4">
-    </div>
-    <div class="row" id="row5">
-    </div>
-    <div class="row" id="score"></div>
+  <body></div>
     <script src="Scripts/index.js"></script>
   </body>
 </html>
