--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Stylesheets/style.css" />
     <title>Document</title>
   </head>
-  <body></div>
+  <body>
     <script src="Scripts/index.js"></script>
   </body>
 </html>
