Unset type from module
so netlify doesn't throw a pissy fit

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="Scripts/index.js"></script>
+    <script src="Scripts/index.js"></script>
     <link rel="stylesheet" href="Stylesheets/bootstrap.css" />
     <link rel="stylesheet" href="Stylesheets/style.css" />
     <title>Document</title>
